--- a/VarkalaApp/VarkalaApp.csproj
+++ b/VarkalaApp/VarkalaApp.csproj
@@ -5,6 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20210830203139_FirstMigration.cs" />
+    <Compile Remove="Migrations\20210830203139_FirstMigration.Designer.cs" />
+    <Compile Remove="Migrations\20210830213110_AddIsActiveColumnToSliders.cs" />
+    <Compile Remove="Migrations\20210830213110_AddIsActiveColumnToSliders.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.18" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.18">
       <PrivateAssets>all</PrivateAssets>
@@ -15,6 +22,10 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Migrations\" />
   </ItemGroup>
 
 </Project>
